backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wenmerge-backend
  namespace: wenmerge

spec:
  selector:
    matchLabels:
      app: wenmerge-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: wenmerge-backend
    spec:
      containers:
      - name: backend
        image: rootwarp/wenmerge-backend:latest
        ports:
        - containerPort: 9090
