backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wenmerge
  namespace: wenmerge

spec:
  type: ClusterIP
  selector:
    app: wenmerge-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
