backend/k8s/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-wenmerge
  namespace: wenmerge

spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api-wenmerge.dsrvlabs.dev"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: secret-dsrvlabs-tls
    hosts:
    - "api-wenmerge.dsrvlabs.dev"
